--- a/css/image_caption.css
+++ b/css/image_caption.css
@@ -1,3 +1,8 @@
+/*!
+ * Froala Image Caption Plugin
+ * Written by Matt Dziuban (http://mattdziuban.com)
+ * Tested with Froala v1.2.3 and v1.2.4 (http://editor.froala.com)
+ */
 .post-caption-container {
   text-align: center;
 }
