Hide line breaks and don't allow inline editing of caption.

--- a/css/image_caption.css
+++ b/css/image_caption.css
@@ -51,6 +51,9 @@
 .post-caption-container .thumbnail .f-img-editor {
   margin: 0 !important;
 }
+.post-caption-container .thumbnail br {
+  display: none !important;
+}
 .thumbnail .caption {
   padding: 5px;
   color: #777;
